# SequanaBCI

./: .gitignore  CMakeLists.txt  README.md
include/: pigletVirtualMachine.c  pigletVirtualMachine.h
lib/: basicVirtualMachine.h  globalEnums.h  regexVirtualMachine.h  registerVirtualMachine.h  stackVirtualMachine.h
src/: main.c  testCases.c
